[package]
name = "signalsmith-stretch"
description = "A wrapper for the Signalsmith Stretch timestretch and pitch-shifting algorithm"
version = "0.1.2"
edition = "2021"
authors = ["Colin Marc <hi@colinmarc.com>"]
license = "MIT"

[dependencies]
dasp = "0.11"

[build-dependencies]
bindgen = "0.70"
cc = "1"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
hound = "3"
oneshot = "0.1"

